Bug 1444313 - Fix desktop file name for snapd's xdg-setting wrapper. r=mkaply, a=ritu

MozReview-Commit-ID: KfG8oEYArKm